syntax = "proto3";

option go_package = "./genproto";

service TradeService {
  rpc StreamTrades (stream TradeRequest) returns (TradeResponse);
}

message TradeRequest {
  int32 id = 1;
  string symbol = 2;
  int32 quantity = 3;
  double price = 4;
}

message TradeResponse {
  int32 total_trades = 1;
  double total_amount = 2;
}
